--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
   <header class="page-header" role="banner">
-    <h1>Arabic keyboard Studio</h1>
+    <div class="page-header__brand">
+      <span class="brand-mark" aria-hidden="true">⌨️</span>
+      <h1>Arabic keyboard Studio</h1>
+    </div>
   </header>
 
   <main class="editor" aria-label="Arabic composing workspace">
