add privacy and about us pages

--- a/index.html
+++ b/index.html
@@ -69,6 +69,40 @@
 
   <div id="live-region" class="sr-only" role="status" aria-live="polite"></div>
 
+  <section class="faq" aria-labelledby="faq-title">
+    <div class="faq__inner">
+      <h2 id="faq-title">FAQ</h2>
+      <dl class="faq__list">
+        <div>
+          <dt>How do I type Arabic characters?</dt>
+          <dd>Click the on-screen keys or use your physical keyboard&mdash;each key is remapped to the Arabic layout and inserts the matching glyph into the editor.</dd>
+        </div>
+        <div>
+          <dt>Where can I find tashkeel symbols?</dt>
+          <dd>The tashkeel palette above the keyboard holds common diacritics. Click any symbol to insert it at the current cursor position.</dd>
+        </div>
+        <div>
+          <dt>Can I copy or save my text?</dt>
+          <dd>Use the toolbar buttons to copy, clear, launch Google or YouTube searches, or download your text as a `.txt` file.</dd>
+        </div>
+        <div>
+          <dt>How do I switch between light and dark mode?</dt>
+          <dd>Tap the moon/sun toggle in the panel corner. The site remembers your choice for future visits.</dd>
+        </div>
+      </dl>
+    </div>
+  </section>
+
+  <footer class="site-footer">
+    <div class="site-footer__inner">
+      <nav class="site-footer__links" aria-label="Secondary navigation">
+        <a class="site-footer__link" href="about.html">About Us</a>
+        <a class="site-footer__link" href="privacy.html">Privacy</a>
+      </nav>
+      <p class="site-footer__copyright">&copy; 2025 Arabic Keyboard Studio</p>
+    </div>
+  </footer>
+
   <script src="script.js" type="module"></script>
 </body>
 </html>
