--- a/index.html
+++ b/index.html
@@ -72,24 +72,24 @@
   <section class="faq" aria-labelledby="faq-title">
     <div class="faq__inner">
       <h2 id="faq-title">FAQ</h2>
-      <dl class="faq__list">
-        <div>
-          <dt>How do I type Arabic characters?</dt>
-          <dd>Click the on-screen keys or use your physical keyboard&mdash;each key is remapped to the Arabic layout and inserts the matching glyph into the editor.</dd>
-        </div>
-        <div>
-          <dt>Where can I find tashkeel symbols?</dt>
-          <dd>The tashkeel palette above the keyboard holds common diacritics. Click any symbol to insert it at the current cursor position.</dd>
-        </div>
-        <div>
-          <dt>Can I copy or save my text?</dt>
-          <dd>Use the toolbar buttons to copy, clear, launch Google or YouTube searches, or download your text as a `.txt` file.</dd>
-        </div>
-        <div>
-          <dt>How do I switch between light and dark mode?</dt>
-          <dd>Tap the moon/sun toggle in the panel corner. The site remembers your choice for future visits.</dd>
-        </div>
-      </dl>
+      <div class="faq__list">
+        <details class="faq__item" open>
+          <summary>How do I type Arabic characters?</summary>
+          <p>Click the on-screen keys or use your physical keyboard&mdash;each key is remapped to the Arabic layout and inserts the matching glyph into the editor.</p>
+        </details>
+        <details class="faq__item">
+          <summary>Where can I find tashkeel symbols?</summary>
+          <p>The tashkeel palette above the keyboard holds common diacritics. Click any symbol to insert it at the current cursor position.</p>
+        </details>
+        <details class="faq__item">
+          <summary>Can I copy or save my text?</summary>
+          <p>Use the toolbar buttons to copy, clear, launch Google or YouTube searches, or download your text as a `.txt` file.</p>
+        </details>
+        <details class="faq__item">
+          <summary>How do I switch between light and dark mode?</summary>
+          <p>Tap the moon/sun toggle in the panel corner. The site remembers your choice for future visits.</p>
+        </details>
+      </div>
     </div>
   </section>
 
